<resources>
    <string name="app_name">Gurux DLMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Gurux DLMS</string>
    <string name="nav_header_subtitle">gurux@gurux.fi</string>
    <string name="search">Search</string>
    <string name="obisCode">OBIS code</string>
    <string name="filter">Filter</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="interfaceType">Interface</string>
    <string name="authentication">Authentication</string>
    <string name="password">Password</string>
    <string name="waittime">Wait time</string>
    <string name="clientAddress">Client Address</string>
    <string name="physicalAddress">Physical Address</string>
    <string name="logicalAddress">Logical Address</string>
    <string name="serialnumber">Serial number</string>
    <string name="error">Error</string>
    <string name="addressType">Address Type</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="refresh">Refresh</string>
    <string name="showTrace">Show trace</string>
    <string name="invalidManufacturer">Select meter manufacturer first.</string>
    <string name="invalidSerialPort">Select serial port first.</string>
    <string name="pduHelp"># To convert Pdu to Xml:\n# Paste or type a PDU hex-string into the text area and then press the "To XML" button.\n# Example:\n601DA109060760857405080102BE10040E01000000065F1F0400180220FFFF</string>
    <string name="xmlHelp"># To convert Xml to Pdu:\n# Paste or type a Xml data to the text area and then press the "To PDU" button.</string>
    <string name="invalidWaitTime">Please enter the wait time higher than 2 second.</string>
    <string name="invalidClientAddress">Invalid client address.</string>
    <string name="invalidPhysicalServerAddress">Invalid physical server address.</string>
    <string name="invalidSerialNumber">Invalid serial number.</string>
    <string name="invalidLogicalServerAddress">Invalid logical server address.</string>
    <string name="menu_read">Read</string>
    <string name="menu_xml_translator">XML Translator</string>
    <string name="menu_obis_translator">OBIS Translator</string>
    <string name="menu_meter_settings">Meter Settings</string>
    <string name="menu_media_settings">Media Settings</string>
    <string name="menu_manufacturers">Manufacturers</string>
    <string name="media">Media</string>
    <string name="logical_name">Logical Name</string>
    <string name="short_name">Short Name</string>
    <string name="unknown">Unknown</string>
    <string name="copyright">Copyright (c) 1998-2025 Gurux Ltd. All rights reserved.</string>
    <string name="readAssociationView">You need to read Association view to see all objects what the meter can offer. Do you want to do it now?</string>
    <string name="readScalers">You need to read scalers and units for the register objects. Do you want to do it now?</string>
    <string name="actionCompleted">Action completed successfully</string>
    <string name="security_setup">Security setup</string>
    <string name="block_cipher_key">Block cipher key</string>
    <string name="authentication_key">Authentication key</string>
    <string name="invalid_value">Invalid value</string>
    <string name="dedicated_key">Dedicated key</string>
    <string name="challenge">Challenge</string>
    <string name="invocation_counter">Invocation Counter</string>
    <string name="supported_services">Supported services</string>
    <string name="security">Security</string>
    <string name="general">General</string>
    <string name="reference">Reference</string>
    <string name="logical_name_referencing">Logical Name Referencing</string>
    <string name="loading_obis_codes">Loading OBIS codes.</string>
    <string name="loading_manufacturer_settings">Loading manufacturer settings.</string>
</resources>
